Post fade out when SAC create with visible scrollbars

This issue is caused by couple reasons:

1. aura overlay scrollbars are visible (opacity=1) at initial state.
2. page is a not scrollable, then become scrollable.

SetScrollable and ScrollbarAnimationController may come from separate
commit and no promising order.

In this patch, we post a delay fade out when SAC create with visible
scrollbars.

Bug: 740795
Change-Id: I15089ba357a67b3336bb251ce19cb2f7bf5953ba